@@ -1,5 +1,8 @@
 2004-10-28  Vincent Noel  <vnoel@cox.net>
 
+	* logview-findbar.c (logview_findbar_populate): Add a spacer tool
+	item so the close button is at the right end of the find bar.
+
 	* logview.c (logview_search): Hook up the new find bar.
 
 	* logview-findbar.h: 
